--- a/social_book/templates/profile.html
+++ b/social_book/templates/profile.html
@@ -27,7 +27,8 @@
 	<section>
 			<div class="feature-photo">
 				<figure><img src="{% static 'images/resources/timeline-1.jpg' %}" alt=""></figure>
-				<form>
+				<form action="/follow" method="POST"> <!--action connects form to this specific url /follow -->
+					{% csrf_token %}
 					<div class="add-btn">
 
 					<span style="color: white; font-size: 27px; margin-right: 520px;"><b><u><a href="/">Home</a></u></b></span>
@@ -38,10 +39,24 @@
 					{% else %}
 					<span style="color: white; font-size: 27px;"><b> {{user_post_length}} Posts </b></span>
 					{% endif %}
-					<span style="color: white; font-size: 27px;"><b>1.7m followers</b></span>
-					<span style="color: white; font-size: 27px;"><b>3.5k following</b></span>
-					<a href="" title="" data-ripple=""><button style="background-color: #ffc0cb; border: #ffc0cb;">Follow</button></a>
-					
+
+					{% if user_followers == 0 %}
+					<span style="color: white; font-size: 27px;"><b>No Followers</b></span>
+					{% elif user_followers == 1%}
+					<span style="color: white; font-size: 27px;"><b>{{user_followers}} Follower</b></span>
+					{% else %}
+					<span style="color: white; font-size: 27px;"><b>{{user_following}} Followers</b></span>
+					{% endif %}
+
+					<input type="hidden" value="{{user.username}}" name="follower" />
+					<input type="hidden" value="{{user_object.username}}" name="user" />
+
+					{% if user_object.username == user.username %}
+					<a href="/settings" title="" data-ripple="">Account Settings</a>
+					{% else %}
+					<a title="" data-ripple=""><button type="submit" style="background-color: #ffc0cb; border: #ffc0cb;">{{button_text}}</button></a>
+					{% endif %}
+
 					</div>
 				</form>
 
