--- a/social_book/templates/index.html
+++ b/social_book/templates/index.html
@@ -1,8 +1,6 @@
 {% load static %}
-
 <!DOCTYPE html>
 <html lang="en">
-
 
 <head>
     <meta charset="UTF-8">
@@ -180,7 +178,7 @@
                         </a>
                         <div uk-drop="mode: click;offset:9" class="header_dropdown profile_dropdown border-t">
                             <ul>
-                                <li><a href="/settings"> Account setting </a> </li>
+                                <li><a href="/usersettings"> Account setting </a> </li>
                                 <li><a href="explore.html">explore </a> </li>
                                 <li><a href="#"> Help </a> </li>
                                 <li><a href="logout"> Log Out</a></li>
