--- a/social_book/templates/profile.html
+++ b/social_book/templates/profile.html
@@ -52,7 +52,7 @@
 					<input type="hidden" value="{{user_object.username}}" name="user" />
 
 					{% if user_object.username == user.username %}
-					<a href="/settings" title="" data-ripple="">Account Settings</a>
+					<a href="/usersettings" title="" data-ripple="">Account Settings</a>
 					{% else %}
 					<a title="" data-ripple=""><button type="submit" style="background-color: #ffc0cb; border: #ffc0cb;">{{button_text}}</button></a>
 					{% endif %}
