--- a/social_book/templates/password_reset.html
+++ b/social_book/templates/password_reset.html
@@ -33,8 +33,7 @@
                     </a>
 
                     <div class="capitalize flex font-semibold hidden lg:block my-2 space-x-3 text-center text-sm">
-                        
-                        <a href="/signup" class="bg-pink-500 pink-500 px-6 py-3 rounded-md shadow text-white">Register</a>
+                        <a href="/signin" class="bg-pink-500 pink-500 px-6 py-3 rounded-md shadow text-white">Login</a>
                     </div>
 
                 </div>
@@ -44,30 +43,27 @@
         <!-- Content-->
         <div>
             <div class="lg:p-12 max-w-md max-w-xl lg:my-0 my-12 mx-auto p-6 space-y-">
-                <h1 class="lg:text-3xl text-xl font-semibold  mb-6"> Log in</h1>
-
-                <div> 
-                    {% for message in messages %}
-                    <h5 style="color: red"> {{message}}
-                    {% endfor %}
-                </div>
-
-                <form action="" method="POST">
-                    {% csrf_token %}
-                    <input type="text" name="username" placeholder="Username" class="bg-gray-200 mb-2 shadow-none dark:bg-gray-800" style="border: 1px solid #d3d5d8 !important;">
-                    <input type="password" name="password" placeholder="***********" class="bg-gray-200 mb-2 shadow-none dark:bg-gray-800" style="border: 1px solid #d3d5d8 !important;">
-                    <div class="flex justify-between my-4">
-                        <div class="checkbox">
-                            <input type="checkbox" id="chekcbox1" checked>
-                            <label for="chekcbox1"><span class="checkbox-icon"></span>Remember Me</label>
-                        </div>
-                        <a href="/password-reset"> Forgot Your Password? </a>
-                    </div> 
-                    <button type="submit" class="bg-gradient-to-br from-pink-500 py-3 rounded-md text-white text-xl to-red-400 w-full">Login</button>
-                    <div class="text-center mt-5 space-x-2">
+                <h1 class="lg:text-3xl text-xl font-semibold  mb-6"> Reset Password</h1>
+				{%block content%}
+				<div class="center">
+					<form method="post" class="card">
+						{% csrf_token %}
+						{% for field in form %}
+								{{ field.label_tag }} 
+								{{ field }}
+								{% if field.errors %}
+									<small>{{ field.errors|striptags  }}</small> 
+								{% endif %}
+						{% endfor %}
+						<div class="form-buttons">
+							<input type="submit" value="Send" class="btn btn-primary" style="margin-top: 5px">
+						</div>
+					</form>
+					<div class="text-center mt-5 space-x-2">
                         <p class="text-base"> Not registered? <a href="/signup" class=""> Create a account </a></p>
                     </div>
-                </form>
+				</div>
+				{%endblock content%}
             </div>
         </div>
         
@@ -84,7 +80,6 @@
                 <p class="capitalize"> © copyright 2020 by IReal</p>
             </div>
         </div>
-
     </div>
 
     <script src="{% static 'assets/js/tippy.all.min.js' %}"></script>
@@ -92,7 +87,5 @@
     <script src="{% static 'assets/js/uikit.js' %}"></script>
     <script src="{% static 'assets/js/simplebar.js' %}"></script>
     <script src="{% static 'assets/js/custom.js' %}"></script>
-
-
 </body>
 </html>
