--- a/social_book/templates/password_reset_done.html
+++ b/social_book/templates/password_reset_done.html
@@ -1,5 +1,4 @@
 {% load static %}
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -43,22 +42,16 @@
         <!-- Content-->
         <div>
             <div class="lg:p-12 max-w-md max-w-xl lg:my-0 my-12 mx-auto p-6 space-y-">
-                <h1 class="lg:text-3xl text-xl font-semibold  mb-6"> Forgot Password</h1>
+                <h1 class="lg:text-3xl text-xl font-semibold  mb-6"> Reset Password</h1>
 
-                <div> 
-                    {% for message in messages %}
-                    <h5 style="color: red"> {{message}}
-                    {% endfor %}
-                </div> 
-                
-                <form action="" method="POST">
-                    {% csrf_token %}
-                    <input type="text" name="email" placeholder="Email address" class="bg-gray-200 mb-2 shadow-none dark:bg-gray-800" style="border: 1px solid #d3d5d8 !important;">
-                    <button type="submit" class="bg-gradient-to-br from-pink-500 py-3 rounded-md text-white text-xl to-red-400 w-full">Recover account</button>
-                    <div class="text-center mt-5 space-x-2">
-                        <p class="text-base"> Not registered? <a href="/signup" class=""> Create a account </a></p>
-                    </div>
-                </form>
+                {%block content%}
+
+				<div class="center card">
+					<p>Please check your inbox and follow the instruction to reset your password.</p>
+				</div>
+
+				{%endblock content%}
+
             </div>
         </div>
         
@@ -72,7 +65,7 @@
                     <a href="#"> Terms</a>
                     <a href="#"> Privacy</a>
                 </div> {% endcomment %}
-                <p class="capitalize"> © copyright 2020 by socol</p>
+                <p class="capitalize"> © copyright 2020 by IReal</p>
             </div>
         </div>
     </div>
