--- a/social_book/templates/password_reset_complete.html
+++ b/social_book/templates/password_reset_complete.html
@@ -43,22 +43,16 @@
         <!-- Content-->
         <div>
             <div class="lg:p-12 max-w-md max-w-xl lg:my-0 my-12 mx-auto p-6 space-y-">
-                <h1 class="lg:text-3xl text-xl font-semibold  mb-6"> Forgot Password</h1>
+                <h1 class="lg:text-3xl text-xl font-semibold  mb-6">Password Reset Confirm</h1>
 
-                {% comment %} <div> 
-                    {% for message in messages %}
-                    <h5 style="color: red"> {{message}}
-                    {% endfor %}
-                </div> {% endcomment %}
+				{%block content%}
 
-                <form action="" method="POST">
-                    {% csrf_token %}
-                    <input type="text" name="email" placeholder="Email address" class="bg-gray-200 mb-2 shadow-none dark:bg-gray-800" style="border: 1px solid #d3d5d8 !important;">
-                    <button type="submit" class="bg-gradient-to-br from-pink-500 py-3 rounded-md text-white text-xl to-red-400 w-full">Recover account</button>
-                    <div class="text-center mt-5 space-x-2">
-                        <p class="text-base"> Not registered? <a href="/signup" class=""> Create a account </a></p>
-                    </div>
-                </form>
+				<div class="card center">
+					<p>Your password has been changed successfully. Please <a href="{% url 'signin' %}">Login</a></p>
+				</div>
+					
+				{%endblock content%}
+
             </div>
         </div>
         
