--- a/social_book/templates/index.html
+++ b/social_book/templates/index.html
@@ -178,6 +178,7 @@
                         </a>
                         <div uk-drop="mode: click;offset:9" class="header_dropdown profile_dropdown border-t">
                             <ul>
+                                <li><a href="/profile/{{user}}"> Profile </a> </li>
                                 <li><a href="/usersettings"> Account setting </a> </li>
                                 <li><a href="explore.html">explore </a> </li>
                                 <li><a href="#"> Help </a> </li>
@@ -389,13 +390,6 @@
             </div>
         </div>
     </div>
-
-
-
-
-
-
-
 
  <!-- Scripts
     ================================================== -->
