--- a/social_book/templates/signin.html
+++ b/social_book/templates/signin.html
@@ -9,16 +9,14 @@
     <title>Sign in</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="{% static 'assets/css/icons.css' %}">
+    {% comment %} <link rel="stylesheet" href="{% static 'assets/css/icons.css' %}"> {% endcomment %}
     <link rel="stylesheet" href="{% static 'assets/css/uikit.css' %}">
     <link rel="stylesheet" href="{% static 'assets/css/style.css' %}">
     <link rel="stylesheet" href="{% static 'assets/css/tailwind.css' %}">
 
 </head>
 
-<body class="bg-gray-100">
-
-
+<body>
     <div id="wrapper" class="flex flex-col justify-between h-screen">
 
         <!-- header-->
@@ -58,7 +56,7 @@
                     <input type="password" name="password" placeholder="***********" class="bg-gray-200 mb-2 shadow-none dark:bg-gray-800" style="border: 1px solid #d3d5d8 !important;">
                     <div class="flex justify-between my-4">
                         <div class="checkbox">
-                            <input type="checkbox" id="chekcbox1" checked>
+                            <input name="rememberMe" type="checkbox" id="chekcbox1" checked>
                             <label for="chekcbox1"><span class="checkbox-icon"></span>Remember Me</label>
                         </div>
                         <a href="/password-reset"> Forgot Your Password? </a>
