--- a/social_book/templates/password_reset.html
+++ b/social_book/templates/password_reset.html
@@ -16,7 +16,7 @@
 
 </head>
 
-<body class="bg-gray-100">
+<body>
 
 
     <div id="wrapper" class="flex flex-col justify-between h-screen">
@@ -33,7 +33,7 @@
                     </a>
 
                     <div class="capitalize flex font-semibold hidden lg:block my-2 space-x-3 text-center text-sm">
-                        <a href="/signin" class="bg-pink-500 pink-500 px-6 py-3 rounded-md shadow text-white">Login</a>
+                        <a href="/signin" class="bg-blue-400 pink-500 px-6 py-3 rounded-md shadow text-white">Login</a>
                     </div>
 
                 </div>
@@ -55,9 +55,7 @@
 									<small>{{ field.errors|striptags  }}</small> 
 								{% endif %}
 						{% endfor %}
-						<div class="form-buttons">
-							<input type="submit" value="Send" class="btn btn-primary" style="margin-top: 5px">
-						</div>
+                        <button type="submit" class="bg-gradient-to-br from-blue-500 py-3 rounded-md text-white text-xl to-red-400 w-full" style="margin-top: 10px">Send</button>
 					</form>
 					<div class="text-center mt-5 space-x-2">
                         <p class="text-base"> Not registered? <a href="/signup" class=""> Create a account </a></p>
