--- a/social_book/templates/index.html
+++ b/social_book/templates/index.html
@@ -24,10 +24,10 @@
                         {% csrf_token %}
                         <div class="left-side">
                             <!-- Logo -->
-                            <div id="logo" class=" uk-hidden@s">
-                                <a href="home.html">
-                                    <b><h1 style="text-transform: uppercase;">Social Book</h1></b>
-                                </a>
+                            <div id="logo">
+                                <a href="/">
+                                    <b><h1 style="font-size: 1.5rem; margin-right: 10px;">IReal</h1></b>
+                                 </a>
                             </div>
 
                             <!--<div class="triger" uk-toggle="target: #wrapper ; cls: sidebar-active">
@@ -49,17 +49,16 @@
                     </form>
                     <div class="right-side lg:pr-4">
                          <!-- upload -->
-                        <a href="#"
-                            class="bg-pink-500 flex font-bold hidden hover:bg-pink-600 hover:text-white inline-block items-center lg:block max-h-10 mr-4 px-4 py-2 rounded shado text-white">
-                            <ion-icon name="add-circle" class="-mb-1
-                             mr-1 opacity-90 text-xl uilus-circle"></ion-icon> Upload Pics
+                        <a href="#" 
+                            class="bg-blue-400 flex font-bold hidden hover:bg-pink-600 hover:text-white inline-block items-center lg:block max-h-5 mr-4 px-6 py-2 rounded shadow text-white">
+                            <ion-icon name="add-circle" class="-mb-1 mr-1 opacity-90 text-xl uilus-circle"></ion-icon> POST
                         </a>
                          <!-- upload dropdown box -->
                         <div uk-dropdown="pos: top-right;mode:click ; animation: uk-animation-slide-bottom-small" class="header_dropdown">
     
-                            <!-- notivication header -->
+                            <!-- notification header -->
                             <div class="px-4 py-3 -mx-5 -mt-4 mb-5 border-b">
-                                <h4>Upload Pics</h4>
+                                <h4>Post</h4>
                             </div>
     
                             
@@ -83,7 +82,7 @@
                                                 {% comment %} <a href="#" class="button soft-warning small"> Choose file</a> {% endcomment %}
                                                 <textarea class="button soft-warning small" name="caption" placeholder="caption..."></textarea>
                                                 <br>
-                                                <button class="button bg-blue-700" type="submit">Upload</button>
+                                                <button class="bg-blue-400 font-bold hidden hover:bg-pink-600 hover:text-white max-h-5 mr-4 px-6 py-2 lg:block  rounded shadow text-white" type="submit">Post</button>
                                             </div>
                                         </form>
         
@@ -180,8 +179,8 @@
                             <ul>
                                 <li><a href="/profile/{{user}}"> Profile </a> </li>
                                 <li><a href="/usersettings"> Account setting </a> </li>
-                                <li><a href="explore.html">explore </a> </li>
-                                <li><a href="#"> Help </a> </li>
+                                {% comment %} <li><a href="explore.html">explore </a> </li>
+                                <li><a href="#"> Help </a> </li> {% endcomment %}
                                 <li><a href="logout"> Log Out</a></li>
                             </ul>
                         </div>
@@ -359,7 +358,7 @@
 
                             <div class="bg-gray-50  border-b border-gray-100 flex items-baseline justify-between py-4 px-6 ">
                                 <h2 class="font-semibold text-lg">Users You Can Follow</h2>
-                                <a href="#"> Refresh</a>
+                                {% comment %} <a href="#"> Refresh</a> {% endcomment %}
                             </div>
                            
                             <div class="divide-gray-300 divide-gray-50 divide-opacity-50 divide-y px-4 ">
