--- a/social_book/templates/password_reset_confirm.html
+++ b/social_book/templates/password_reset_confirm.html
@@ -33,7 +33,7 @@
                     </a>
 
                     <div class="capitalize flex font-semibold hidden lg:block my-2 space-x-3 text-center text-sm">
-                        <a href="/signin" class="bg-pink-500 pink-500 px-6 py-3 rounded-md shadow text-white">Login</a>
+                        <a href="/signin" class="bg-blue-400 pink-500 px-6 py-3 rounded-md shadow text-white">Login</a>
                     </div>
 
                 </div>
@@ -61,7 +61,7 @@
 					  
 					  
 					  <div>
-						<button type="submit" class="bg-gradient-to-br from-pink-500 py-3 rounded-md text-white text-xl to-red-400 w-full" style="margin-top: 10px">Reset Password</button>
+						<button type="submit" class="bg-gradient-to-br from-blue-500 py-3 rounded-md text-white text-xl to-red-400 w-full" style="margin-top: 10px">Reset Password</button>
 					  </div>
 					</form>
 				</div>
