--- a/social_book/templates/search.html
+++ b/social_book/templates/search.html
@@ -2,8 +2,6 @@
 
 <!DOCTYPE html>
 <html lang="en">
-
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,16 +17,17 @@
 </head>
 
 <body>
+    
             <form action="search" method="POST">
             {% csrf_token %}
             <header style="margin-top: -23px;">
                 <div class="header_inner">
                     <div class="left-side">
                         <!-- Logo -->
-                        <div id="logo" class=" uk-hidden@s">
+                        <div id="logo">
                             <a href="/">
-                                <!-- <b><h1 style="text-transform: uppercase;">Social Book</h1></b> -->
-                            </a>
+                                <b><h1 style="font-size: 1.5rem; margin-right: 10px;">IReal</h1></b>
+                             </a>
                         </div>
 
                         <!--<div class="triger" uk-toggle="target: #wrapper ; cls: sidebar-active">
@@ -53,11 +52,11 @@
                     <div class="right-side lg:pr-4">
                         <!-- welcome user -->
                         <a href="#" class="">
-                            Welcome <b name="" class="">{{user.username}}&nbsp; &nbsp; &nbsp;</b>
+                            <b name="" class="">{{user.username}}&nbsp; &nbsp; &nbsp;</b>
                         </a>
 
                          <!-- upload -->
-                        <a href="#"
+                        {% comment %} <a href="#"
                             class="bg-pink-500 flex font-bold hidden hover:bg-pink-600 hover:text-white inline-block items-center lg:block max-h-10 mr-4 px-4 py-2 rounded shado text-white">
                             <ion-icon name="add-circle" class="-mb-1
                              mr-1 opacity-90 text-xl uilus-circle"></ion-icon> New Post
@@ -117,7 +116,7 @@
                             <div class="px-4 py-3 -mx-5 -mb-4 mt-5 border-t text-sm">
                                 Your File size Must be Maxmium 999MB
                             </div>
-                        </div>
+                        </div> {% endcomment %}
                         
                          <!-- Notification -->
 
@@ -152,7 +151,7 @@
                         <!-- <a href="#" class="header-links-item">
                             <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="0.5em" height="0.5em" preserveAspectRatio="xMidYMid meet" viewBox="0 0 16 16"><g fill="currentColor"><path d="M2 0a2 2 0 0 0-2 2v8a2 2 0 0 0 2 2h2.5a1 1 0 0 1 .8.4l1.9 2.533a1 1 0 0 0 1.6 0l1.9-2.533a1 1 0 0 1 .8-.4H14a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z"/></g></svg>
                         </a> -->
-                        <div uk-drop="mode: click;offset: 4" class="header_dropdown">
+                        {% comment %} <div uk-drop="mode: click;offset: 4" class="header_dropdown">
                             <h4
                                 class="-mt-5 -mx-5 bg-gradient-to-t from-gray-100 to-gray-50 border-b font-bold px-6 py-3">
                                 Messages </h4>
@@ -172,7 +171,7 @@
 
                             </ul>
                             <a href="#" class="see-all">See all</a>
-                        </div>
+                        </div> {% endcomment %}
 
                         <!-- profile -->
 
@@ -181,7 +180,7 @@
                         </a>
                         <div uk-drop="mode: click;offset:9" class="header_dropdown profile_dropdown border-t">
                             <ul>
-                                <li><a href="/settings"> Account setting </a> </li>
+                                <li><a href="/usersettings"> Account setting </a> </li>
                                 <!-- <li><a href="explore.html">explore </a> </li> -->
                                 <li><a href="/logout"> Log Out</a></li>
                             </ul>
@@ -196,7 +195,7 @@
                 
                 <style>
                 body{margin-top:20px;
-                background-color: #eee;
+                    margin-bottom:20px;
                 }
 
                 .search-result-categories>li>a {
