--- a/social_book/templates/setting.html
+++ b/social_book/templates/setting.html
@@ -18,9 +18,41 @@
 
 <body>
 
+    <header>
+        <div class="header_inner">
+
+            <div id="logo">
+                <a href="/">
+                    <b><h1 style="font-size: 1.5rem; margin-right: 10px;">IReal</h1></b>
+                    </a>
+            </div>
+
+
+            <div class="right-side lg:pr-4">
+
+                <h1 class="text-2xl leading-none text-gray-900 tracking-tight mt-1">Account Setting {{user.username}} </h1>
+
+                <!-- profile -->
+                <a href="#">
+                    <img src="{{user_profile.profileimg.url}}" class="header-avatar" alt="">
+                </a>
+                <div uk-drop="mode: click;offset:9" class="header_dropdown profile_dropdown border-t">
+                    <ul>
+                        <li><a href="/profile/{{user}}"> Profile </a> </li>
+                        <li><a href="/usersettings"> Account setting </a> </li>
+                        {% comment %} <li><a href="explore.html">explore </a> </li>
+                        <li><a href="#"> Help </a> </li> {% endcomment %}
+                        <li><a href="logout"> Log Out</a></li>
+                    </ul>
+                </div>
+
+            </div>
+        </div>
+    </header>
+
     <div class="container m-auto"> 
 
-        <h1 class="text-2xl leading-none text-gray-900 tracking-tight mt-3"><a href="/">Home</a> / Account Setting {{user.username}} </h1>
+        
         {% comment %} <ul class="mt-5 -mr-3 flex-nowrap lg:overflow-hidden overflow-x-scroll uk-tab">
             <li class="uk-active"><a href="#">General</a></li>
             <li><a href="#">Profile</a></li>
@@ -31,10 +63,7 @@
             <li><a href="#">Security</a></li>
         </ul> {% endcomment %}
 
-        <br>
-        <hr></hr>
-
-        <div class="grid lg:grid-cols-3 mt-12 gap-8">
+        <div class="grid lg:grid-cols-3 gap-1">
             <div>
                 <h3 class="text-xl mb-2"> General</h3>
                 <p></p>
@@ -85,7 +114,7 @@
                         </div> 
                         <div class="bg-gray-10 p-6 pt-0 flex justify-end space-x-3">
                             <button class="p-2 px-4 rounded bg-gray-50 text-red-500"><a href="/"></a> Cancel </button>
-                            <button type="submit" class="button bg-blue-700"> Save </button>
+                            <button type="submit" class="bg-blue-400 flex font-bold hidden hover:bg-pink-600 hover:text-white inline-block items-center lg:block max-h-5 mr-4 px-6 py-2 rounded shadow text-white"> Save </button>
                         </div>
                     </form>
                 </div>
@@ -152,15 +181,12 @@
     </div>
     </div>    
 
- <!-- Scripts
-    ================================================== -->
+ <!-- Scripts ================================================== -->
     <script src="{% static 'assets/js/tippy.all.min.js' %}"></script>  
     <script src="{% static 'assets/js/jquery-3.3.1.min.js' %}"></script>
     <script src="{% static 'assets/js/uikit.js' %}"></script>
     <script src="{% static 'assets/js/simplebar.js' %}"></script>
     <script src="{% static 'assets/js/custom.js' %}"></script>
-
-
     <script src="{% static '../../unpkg.com/ionicons%405.2.3/dist/ionicons.js' %}"></script>
 </body>
 
