--- a/social_book/templates/password_reset_confirm.html
+++ b/social_book/templates/password_reset_confirm.html
@@ -22,23 +22,18 @@
     <div id="wrapper" class="flex flex-col justify-between h-screen">
 
         <!-- header-->
-        <div class="bg-white py-4 shadow dark:bg-gray-800">
-            <div class="max-w-6xl mx-auto">
-
-
-                <div class="flex items-center lg:justify-between justify-around">
-
-                    <a href="trending.html">
-                       <b><h1 style="font-size: 1.5rem;">IReal</h1></b>
-                    </a>
-
-                    <div class="capitalize flex font-semibold hidden lg:block my-2 space-x-3 text-center text-sm">
-                        <a href="/signin" class="bg-blue-400 pink-500 px-6 py-3 rounded-md shadow text-white">Login</a>
-                    </div>
-
+        <nav class="bg-white border-gray-200 dark:bg-gray-900">
+            <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
+                <a href="/signin">
+                    <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white font-size: 1.5rem mx-1" >IReal</span>
+                </a>
+            <div>
+                <div class="capitalize flex font-semibold lg:block my-2 space-x-3 text-center text-sm">
+                    <a href="/signin" class="bg-blue-400 px-6 py-3 rounded-md shadow text-white">Login</a>
                 </div>
             </div>
-        </div>
+            </div>
+        </nav>
 
         <!-- Content-->
         <div>
