--- a/social_book/templates/setting.html
+++ b/social_book/templates/setting.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load static tailwind_tags %}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -13,6 +14,8 @@
     <link rel="stylesheet" href="{% static 'assets/css/uikit.css' %}">
     <link rel="stylesheet" href="{% static 'assets/css/style.css' %}">
     <link rel="stylesheet" href="{% static 'assets/css/tailwind.css' %}">
+    <link rel="stylesheet" href="{% static 'assets/css/mystyles.css' %}">
+    {% tailwind_css %}
 
 </head>
 
@@ -30,7 +33,7 @@
 
             <div class="right-side lg:pr-4">
 
-                <h1 class="text-2xl leading-none text-gray-900 tracking-tight mt-1">Account Setting {{user.username}} </h1>
+                <h1 class="font-semibold leading-none text-gray-900 tracking-tight mt-1">Account Setting {{user.username}} </h1>
 
                 <!-- profile -->
                 <a href="#">
@@ -50,7 +53,7 @@
         </div>
     </header>
 
-    <div class="container m-auto"> 
+    <div class="container userSettingsContainer m-auto"> 
 
         
         {% comment %} <ul class="mt-5 -mr-3 flex-nowrap lg:overflow-hidden overflow-x-scroll uk-tab">
@@ -114,7 +117,7 @@
                         </div> 
                         <div class="bg-gray-10 p-6 pt-0 flex justify-end space-x-3">
                             <button class="p-2 px-4 rounded bg-gray-50 text-red-500"><a href="/"></a> Cancel </button>
-                            <button type="submit" class="bg-blue-400 flex font-bold hidden hover:bg-pink-600 hover:text-white inline-block items-center lg:block max-h-5 mr-4 px-6 py-2 rounded shadow text-white"> Save </button>
+                            <button type="submit" class="bg-blue-400 flex font-bold hover:bg-pink-600 hover:text-white inline-block items-center lg:block max-h-5 mr-4 px-6 py-2 rounded shadow text-white"> Save </button>
                         </div>
                     </form>
                 </div>
