--- a/social_book/templates/signin.html
+++ b/social_book/templates/signin.html
@@ -17,27 +17,23 @@
 </head>
 
 <body>
+
     <div id="wrapper" class="flex flex-col justify-between h-screen">
-
-        <!-- header-->
-        <div class="bg-white py-4 shadow dark:bg-gray-800">
-            <div class="max-w-6xl mx-auto">
-
-
-                <div class="flex items-center lg:justify-between justify-around">
-
+        
+            <nav class="bg-white border-gray-200 dark:bg-gray-900">
+                <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
                     <a href="/signin">
-                       <b><h1 style="font-size: 1.5rem;">IReal</h1></b>
+                        <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white font-size: 1.5rem mx-1" >IReal</span>
                     </a>
-
-                    <div class="capitalize flex font-semibold hidden lg:block my-2 space-x-3 text-center text-sm">
+                <div>
+                    <div class="capitalize flex font-semibold lg:block my-2 space-x-3 text-center text-sm">
                         <a href="/signup" class="bg-blue-400 px-6 py-3 rounded-md shadow text-white">Register</a>
                     </div>
-
                 </div>
-            </div>
-        </div>
-
+                </div>
+            </nav>
+  
+        
         <!-- Content-->
         <div>
             <div class="lg:p-12 max-w-md max-w-xl lg:my-0 my-12 mx-auto p-6 space-y-">
@@ -58,7 +54,7 @@
                             <input name="rememberMe" type="checkbox" id="chekcbox1" checked>
                             <label for="chekcbox1"><span class="checkbox-icon"></span>Remember Me</label>
                         </div>
-                        <a href="/password-reset"> Forgot Your Password? </a>
+                        <a href="/password-reset" class="p-1 sm:p-1"> Forgot Your Password? </a>
                     </div>
                     <button type="submit" class="bg-gradient-to-br from-blue-500 py-3 rounded-md text-white text-xl to-red-400 w-full">Login</button>
                     <div class="text-center mt-5 space-x-2">
